--- a/css/results.css
+++ b/css/results.css
@@ -1,4 +1,3 @@
-
 :root {
   /* Colors */
   --color-background: rgba(252, 252, 249, 1);
@@ -1160,3 +1159,5 @@ select.form-control {
   color: var(--color-error);
   font-weight: var(--font-weight-medium);
 }
+
+/* Preference Sensitivity Page */
